* Fix a bug with sharing that didn't refresh the share link and text when you clicked a button * rename the clickbait button class * Some super basic styling for the modal, and instead of a link title, use a title plus an input box like normal people. * Fix some whitespace and flow and top bar more to my liking * Get rid of some unnecessary instance vars * Make a clickbait button helper thinger * Rebased and rectified with master * Use fancy shmancy candylike font for buttons

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -28,6 +28,15 @@ h1 {
 #topbar {
   background-color: $bgcolor;
   color: $linkcolor;
+  padding: 0 30px;
+  line-height: 30px;
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  .nav {
+    margin: 10px 0;
+    flex: 1;
+  }
 }
 
 #main {
@@ -48,25 +57,21 @@ h1 {
   }
 }
 
-#topbar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  .nav {
-    margin: 10px 0;
-    flex: 1;
-  }
+.clickbait-frame {
+  padding-top: 20px;
+  min-height: 120px;
 }
+
 #clickbait-buttons {
   //background: #000;
-  padding: 1em 2em;
   font-weight: bold;
-  font-size: 1.5em;
+  font-size: 28px;
   flex-wrap: wrap;
   text-align: center;
   display: flex;
   justify-content: space-around;
 }
+
 .share {
   text-align: center;
   .button {
@@ -75,23 +80,18 @@ h1 {
   }
 }
 
-.btn-clickbait {
-  /* @include button--gradient;   - Let candy buttons do this */
-  margin: 1em 15px;
-  &:last-child {
-    margin-left: 0;
-  }
+.button.button--clickbait {
+  font-family: 'Lobster Two', cursive;
+  font-weight: 700;
+  margin: 28px;
   flex-basis: 0;
   flex-grow: 1;
   margin-top: 5px;
-  line-height: 2.5em;
   cursor: pointer;
-  color: #ffffff;
   text-decoration: none;
-  text-shadow: 0px -1px 0px #c70067;
 }
 
-.btn-clickbait:active {
+.button--clickbait:active {
   position: relative;
   top: 1px;
 }
@@ -119,4 +119,21 @@ h1 {
 
 .sparkley {
   transition: all 0.25s ease;
+}
+
+.text-center { text-align: center; }
+
+.clickbait-link {
+  width: 75%;
+  font-size: 22px;
+  padding: 11px;
+  display: block;
+  margin: 10px auto;
+}
+
+.ladom.modal {
+  display: inline-block;
+  border: 8px solid $button-grad;
+  background-color: $contrastcolor;
+  border-radius: 80px;
 }
